# pyview-example-auth

./: Dockerfile  justfile  pyproject.toml  readme.md
src/pyview_example_auth/: app.py
src/pyview_example_auth/auth/: __init__.py  auth.py  backend.py
src/pyview_example_auth/views/: __init__.py
src/pyview_example_auth/views/profile/: profile.html  profile.py
